2010-05-04
Fixed some spacing problems with the search box in IE, extremely annoying
Fixed counting of file types in select module
Implemented Geshi code highlighter, hopefully this will have better memory management

2010-05-02
Fixed huge vulnerability in the template output, validate_tfile() now checks to make sure the file is within the template directory
Fixed vulnerability with something going wrong with the database and switching to fs_ mode
	fs_file now returns empty if the system thinks it is not installed
Began implementing language module
Worked more on translating

2010-05-01
Config for modules now supports named keys for session, alter_query, and always output functions
	Always output will call an output function if a variable is set in the request
		This is useful for templates to use variables set by core, search, and now language
	The keys can be named as variables set to the string name of a function to call when that particular variable is present
		That way, modules can branch out and not just have their output function called

2010-04-29
Settings validation functions can now be defined in GLOBALS just like request validation functions
Fixed bug in template plugin configuration
Added configuration for file handlers
	Now if a admin module does not have an output function, it is assumed to be there only for configuration
Worked a lot on the select_block template in live
	It is very pretty now
Decided to make Live the main template
Worked on the way errors are displayed
The live template now gets the errors through ajax, errors that haven't been printed are saved in an error queue in the session

2010-04-28
Worked a lot on configure_ functions
	Now all modules can have their own configuration page
	Uses the default forms
	Uses default info objects
Fixed a bug in db_file handlers,
	Wasn't checking correct database in the dir alter_query() function
Added offsite handling to the url() function
	Commented url() function a lot more

2010-04-27